--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -2,9 +2,32 @@
 import Layout from '../layouts/Layout.astro';
 import background from '../assets/background.svg';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const pageTitle = 'About Me';
+
+const identity = {
+  name: 'Brad Bales',
+  location: 'Birmingham, AL',
+  occupation: 'QA Automation Engineer',
+  hobbies: ['photography', 'painting', 'video games'],
+};
+
+const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'Painting'];
+
+const happy = true;
+const finished = false;
+const goal = 3;
+
+const skillColor = 'navy';
+const fontWeight = 'bold';
+const textCase = 'uppercase';
 ---
+
+<style>
+  h1 {
+    color: purple;
+    font-size: 4rem;
+  }
+</style>
 
 <Layout>
   <div id='container'>
@@ -12,13 +35,12 @@ import background from '../assets/background.svg';
       <a href='/'>Home</a>
       <a href='/about/'>About</a>
       <a href='/blog/'>Blog</a>
-    </nav>s
+    </nav>
 
     <img id='background' src={background.src} alt='' fetchpriority='high' />
     <main>
       <section id='hero'>
-        <h1>About Me:</h1>
-        <h2>...and my new Astro site!</h2>
+        <h1>{pageTitle}</h1>
         <p>
           Aspiring web developer, full-time QA Automation Engineer, and
           part-time artist.
@@ -27,12 +49,41 @@ import background from '../assets/background.svg';
           Currently, I am working through a tutorial project so I can learn how
           to use Astro to build content driven websites.
         </p>
+
+        <p>Here are a few facts about me:</p>
+        <ul>
+          <li>My name is {identity.name}.</li>
+          <li>
+            I live in {identity.location} and I work as a {identity.occupation}.
+          </li>
+          {
+            identity.hobbies.length >= 2 && (
+              <li>
+                Two of my hobbies are: {identity.hobbies[0]} and{' '}
+                {identity.hobbies[1]}
+              </li>
+            )
+          }
+        </ul>
+        <p>My skills are:</p>
+        <ul>
+          {skills.map((skill) => <li class='skill'>{skill}</li>)}
+        </ul>
+        {happy && <p>I am happy to be learning Astro!</p>}
+        {finished && <p>I finished this tutorial!</p>}
+        {
+          goal === 3 ? (
+            <p>My goal is to finish in 3 days.</p>
+          ) : (
+            <p>My goal is not 3 days.</p>
+          )
+        }
       </section>
     </main>
   </div>
 </Layout>
 
-<style>
+<style define:vars={{ skillColor, fontWeight, textCase }}>
   #background {
     position: fixed;
     top: 0;
@@ -218,5 +269,11 @@ import background from '../assets/background.svg';
     h1 {
       line-height: 1.5;
     }
+  }
+
+  .skill {
+    color: var(--skillColor);
+    font-weight: var(--fontWeight);
+    text-transform: var(--textCase);
   }
 </style>
