--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,6 @@
 ---
+import '../styles/global.css';
+
 import Layout from '../layouts/Layout.astro';
 import background from '../assets/background.svg';
 
