--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,36 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import '../styles/global.css';
+import background from '../assets/background.svg';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const pageTitle = 'Home Page';
 ---
 
-<Layout>
-  <Welcome />
-</Layout>
+<html lang='en'>
+  <head>
+    <meta charset='utf-8' />
+    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+    <meta name='viewport' content='width=device-width' />
+    <meta name='generator' content={Astro.generator} />
+    <title>{pageTitle}</title>
+  </head>
+
+  <body>
+    <div id='container'>
+      <Header />
+      <img id='background' src={background.src} alt='' fetchpriority='high' />
+
+      <main>
+        <section id='hero'>
+          <h1>{pageTitle}</h1>
+        </section>
+      </main>
+
+      <Footer />
+    </div>
+    <script>
+      import '../scripts/menu.ts';
+    </script>
+  </body>
+</html>
