--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -3,6 +3,7 @@ import '../styles/global.css';
 
 import background from '../assets/background.svg';
 import Header from '../components/Header.astro';
+import Layout from '../layouts/Layout.astro';
 
 const pageTitle = 'About Me';
 
@@ -24,134 +25,49 @@ const fontWeight = 'bold';
 const textCase = 'uppercase';
 ---
 
-<body>
-  <div id='container'>
-    <Header />
+<Layout pageTitle={pageTitle}>
+  <p>
+    Aspiring web developer, full-time QA Automation Engineer, and part-time
+    artist.
+  </p>
+  <p>
+    Currently, I am working through a tutorial project so I can learn how to use
+    Astro to build content driven websites.
+  </p>
 
-    <img id='background' src={background.src} alt='' fetchpriority='high' />
-    <main>
-      <section id='hero'>
-        <h1>{pageTitle}</h1>
-        <p>
-          Aspiring web developer, full-time QA Automation Engineer, and
-          part-time artist.
-        </p>
-        <p>
-          Currently, I am working through a tutorial project so I can learn how
-          to use Astro to build content driven websites.
-        </p>
+  <p>Here are a few facts about me:</p>
+  <ul>
+    <li>My name is {identity.name}.</li>
+    <li>
+      I live in {identity.location} and I work as a {identity.occupation}.
+    </li>
+    {
+      identity.hobbies.length >= 2 && (
+        <li>
+          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
+        </li>
+      )
+    }
+  </ul>
+  <p>My skills are:</p>
+  <ul>
+    {skills.map((skill) => <li class='skill'>{skill}</li>)}
+  </ul>
+  {happy && <p>I am happy to be learning Astro!</p>}
+  {finished && <p>I finished this tutorial!</p>}
+  {
+    goal === 3 ? (
+      <p>My goal is to finish in 3 days.</p>
+    ) : (
+      <p>My goal is not 3 days.</p>
+    )
+  }
+</Layout>
 
-        <p>Here are a few facts about me:</p>
-        <ul>
-          <li>My name is {identity.name}.</li>
-          <li>
-            I live in {identity.location} and I work as a {identity.occupation}.
-          </li>
-          {
-            identity.hobbies.length >= 2 && (
-              <li>
-                Two of my hobbies are: {identity.hobbies[0]} and{' '}
-                {identity.hobbies[1]}
-              </li>
-            )
-          }
-        </ul>
-        <p>My skills are:</p>
-        <ul>
-          {skills.map((skill) => <li class='skill'>{skill}</li>)}
-        </ul>
-        {happy && <p>I am happy to be learning Astro!</p>}
-        {finished && <p>I finished this tutorial!</p>}
-        {
-          goal === 3 ? (
-            <p>My goal is to finish in 3 days.</p>
-          ) : (
-            <p>My goal is not 3 days.</p>
-          )
-        }
-      </section>
-    </main>
-  </div>
-  <script>
-    import '../scripts/menu.ts';
-  </script>
-</body>
-
-<style define:vars={{ skillColor, fontWeight, textCase }}>
+<style is:global define:vars={{ skillColor, fontWeight, textCase }}>
   h1 {
     color: purple;
     font-size: 4rem;
-  }
-
-  #background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -1;
-    filter: blur(100px);
-  }
-
-  #container {
-    font-family: Inter, Roboto, 'Helvetica Neue', 'Arial Nova', 'Nimbus Sans',
-      Arial, sans-serif;
-    height: 100%;
-  }
-
-  main {
-    height: 100%;
-    display: flex;
-    justify-content: center;
-  }
-
-  /* nav {
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 16px;
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    backdrop-filter: blur(20px);
-    z-index: 1;
-    font-size: 24px;
-    font-weight: bold;
-  } */
-
-  a {
-    color: #111827;
-    text-decoration: none;
-  }
-
-  #hero {
-    display: flex;
-    align-items: start;
-    flex-direction: column;
-    justify-content: center;
-    padding: 16px;
-  }
-
-  h1 {
-    font-size: 22px;
-    margin-top: 0.25em;
-  }
-
-  h2 {
-    margin: 0 0 1em;
-    font-weight: normal;
-    color: #111827;
-    font-size: 20px;
-  }
-
-  p {
-    color: #4b5563;
-    font-size: 16px;
-    line-height: 24px;
-    letter-spacing: -0.006em;
-    margin: 0;
   }
 
   .skill {
