--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,36 +1,8 @@
 ---
-import '../styles/global.css';
-import background from '../assets/background.svg';
-import Header from '../components/Header.astro';
-import Footer from '../components/Footer.astro';
-
+import Layout from '../layouts/Layout.astro';
 const pageTitle = 'Home Page';
 ---
 
-<html lang='en'>
-  <head>
-    <meta charset='utf-8' />
-    <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='viewport' content='width=device-width' />
-    <meta name='generator' content={Astro.generator} />
-    <title>{pageTitle}</title>
-  </head>
-
-  <body>
-    <div id='container'>
-      <Header />
-      <img id='background' src={background.src} alt='' fetchpriority='high' />
-
-      <main>
-        <section id='hero'>
-          <h1>{pageTitle}</h1>
-        </section>
-      </main>
-
-      <Footer />
-    </div>
-    <script>
-      import '../scripts/menu.ts';
-    </script>
-  </body>
-</html>
+<Layout pageTitle={pageTitle}>
+  <h2>My awesome blog subtitle</h2>
+</Layout>
