--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -40,6 +40,7 @@ nav {
   z-index: 1;
   font-size: 24px;
   font-weight: bold;
+  height: 80px;
 }
 
 a {
@@ -54,7 +55,7 @@ a {
   width: 100%;
   height: 100%;
   z-index: -1;
-  filter: blur(100px);
+  filter: blur(10px);
 }
 
 #container {
@@ -64,7 +65,6 @@ a {
 }
 
 main {
-  height: 100%;
   display: flex;
   justify-content: center;
 }
@@ -97,6 +97,10 @@ p {
   margin: 0;
 }
 
+ul {
+  list-style-type: none;
+}
+
 /* nav styles */
 .hamburger {
   padding-right: 20px;
@@ -108,14 +112,12 @@ p {
   width: 40px;
   height: 5px;
   margin-bottom: 10px;
-  background-color: #ff9776;
 }
 
 .nav-links {
   width: 100%;
   top: 5rem;
   left: 48px;
-  background-color: #ff9776;
   display: none;
   margin: 0;
 }
@@ -132,7 +134,8 @@ p {
 
 .nav-links a:hover,
 .nav-links a:focus {
-  background-color: #ff9776;
+  font-size: 1.4rem;
+  transition: linear;
 }
 
 .expanded {
@@ -163,4 +166,10 @@ p {
     display: inline-block;
     padding: 15px 20px;
   }
+}
+
+/* Blog List Items */
+.post-list-item {
+  margin-bottom: 2rem;
+  font-size: large;
 }
