Changed bkgrd, added styling, added tags page

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -9,7 +9,7 @@ const { platform, username } = Astro.props;
     font-size: 1.5rem;
     font-weight: bold;
     padding: 0.5rem 1rem;
-    color: white;
-    background-color: #4c1d95;
+    color: #dfe6e9;
+    background-color: #2d3436;
   }
 </style>
