--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,6 @@
 ---
 import '../styles/global.css';
-import background from '../assets/background.svg';
+import background from '../assets/watercolor-background.jpg';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 
@@ -16,9 +16,9 @@ const { pageTitle } = Astro.props;
     <title>{pageTitle}</title>
   </head>
 
+  <Header />
   <body>
     <div id='container'>
-      <Header />
       <img id='background' src={background.src} alt='' fetchpriority='high' />
 
       <main>
@@ -34,4 +34,6 @@ const { pageTitle } = Astro.props;
       import '../scripts/menu.ts';
     </script>
   </body>
+
+
 </html>
