--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,21 +1,44 @@
 ---
 import Layout from './Layout.astro';
+
 const { frontmatter } = Astro.props;
-const displayTags =
-  frontmatter.tags &&
-  frontmatter.tags.map((tag: string) => tag.toUpperCase()).join(', ');
 ---
 
 <Layout pageTitle={frontmatter.title}>
   <img src={frontmatter.image.url} alt={frontmatter.image.alt} width='50%' />
   <p>Written by {frontmatter.author}</p>
   <p><em>{frontmatter.description}</em></p>
+
   <slot />
   <p>Published on: {frontmatter.pubDate.toString().slice(0, 10)}</p>
 
-  {
-    frontmatter.tags && (
-      <strong>TAGS: {frontmatter.tags.join(', ').toUpperCase()}</strong>
-    )
-  }
+  <div class='tags'>
+    <strong class='tag'>TAGS:</strong>
+    {
+      frontmatter.tags &&
+        frontmatter.tags.map((tag: string) => (
+          <p class='tag'>
+            <a href={`/tags/${tag}`}>#{tag}</a>
+          </p>
+        ))
+    }
+  </div>
 </Layout>
+
+<style>
+  a {
+    font-weight: bold;
+    color: #2d3436;
+  }
+
+  .tags {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 1em;
+  }
+
+  .tag {
+    padding: 0em 0.5em;
+    font-size: 1em;
+  }
+</style>
