--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -20,7 +20,7 @@ const happy = true;
 const finished = false;
 const goal = 3;
 
-const skillColor = 'navy';
+const skillColor = '#2d3436';
 const fontWeight = 'bold';
 const textCase = 'uppercase';
 ---
@@ -66,7 +66,7 @@ const textCase = 'uppercase';
 
 <style is:global define:vars={{ skillColor, fontWeight, textCase }}>
   h1 {
-    color: purple;
+    color: #2d3436;
     font-size: 4rem;
   }
 
