--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -44,7 +44,7 @@ nav {
 }
 
 a {
-  color: #111827;
+  color: #2d3436;
   text-decoration: none;
 }
 
@@ -55,7 +55,7 @@ a {
   width: 100%;
   height: 100%;
   z-index: -1;
-  filter: blur(10px);
+  filter: blur(100px);
 }
 
 #container {
@@ -85,12 +85,12 @@ h1 {
 h2 {
   margin: 0 0 1em;
   font-weight: normal;
-  color: #111827;
+  color: #2d3436;
   font-size: 20px;
 }
 
 p {
-  color: #4b5563;
+  color: #2d3436;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: -0.006em;
@@ -99,6 +99,7 @@ p {
 
 ul {
   list-style-type: none;
+  padding-inline-start: 0;
 }
 
 /* nav styles */
