--- a/src/pages/tags/[tag].astro
+++ b/src/pages/tags/[tag].astro
@@ -33,3 +33,10 @@ const { posts } = Astro.props;
     }
   </ul>
 </Layout>
+
+<style>
+  p {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+</style>
