--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,6 @@
 ---
 import '../styles/global.css';
 
-import background from '../assets/background.svg';
-import Header from '../components/Header.astro';
 import Layout from '../layouts/Layout.astro';
 
 const pageTitle = 'About Me';
@@ -17,7 +15,7 @@ const identity = {
 const skills = ['HTML', 'CSS', 'JavaScript', 'React', 'Astro', 'Painting'];
 
 const happy = true;
-const finished = false;
+const finished = true;
 const goal = 3;
 
 const skillColor = '#2d3436';
@@ -26,53 +24,56 @@ const textCase = 'uppercase';
 ---
 
 <Layout pageTitle={pageTitle}>
-  <p>
-    Aspiring web developer, full-time QA Automation Engineer, and part-time
-    artist.
-  </p>
-  <p>
-    Currently, I am working through a tutorial project so I can learn how to use
-    Astro to build content driven websites.
-  </p>
+  <div id='container'>
+    <p>
+      Aspiring web developer, full-time QA Automation Engineer, and part-time
+      artist.
+    </p>
+    <p>
+      Currently, I am working through a tutorial project so I can learn how to
+      use Astro to build content driven websites.
+    </p>
 
-  <p>Here are a few facts about me:</p>
-  <ul>
-    <li>My name is {identity.name}.</li>
-    <li>
-      I live in {identity.location} and I work as a {identity.occupation}.
-    </li>
+    <p>Here are a few facts about me:</p>
+    <ul>
+      <li>My name is {identity.name}.</li>
+      <li>
+        I live in {identity.location} and I work as a {identity.occupation}.
+      </li>
+      {
+        identity.hobbies.length >= 2 && (
+          <li>
+            Two of my hobbies are: {identity.hobbies[0]} and{' '}
+            {identity.hobbies[1]}
+          </li>
+        )
+      }
+    </ul>
+    <p>My skills are:</p>
+    <ul>
+      {skills.map((skill) => <li class='skill'>{skill}</li>)}
+    </ul>
+    {happy && <p>I am happy to be learning Astro!</p>}
+    {finished && <p>I finished this tutorial!</p>}
     {
-      identity.hobbies.length >= 2 && (
-        <li>
-          Two of my hobbies are: {identity.hobbies[0]} and {identity.hobbies[1]}
-        </li>
+      goal === 3 ? (
+        <p>My goal is to finish in 3 days.</p>
+      ) : (
+        <p>My goal is not 3 days.</p>
       )
     }
-  </ul>
-  <p>My skills are:</p>
-  <ul>
-    {skills.map((skill) => <li class='skill'>{skill}</li>)}
-  </ul>
-  {happy && <p>I am happy to be learning Astro!</p>}
-  {finished && <p>I finished this tutorial!</p>}
-  {
-    goal === 3 ? (
-      <p>My goal is to finish in 3 days.</p>
-    ) : (
-      <p>My goal is not 3 days.</p>
-    )
-  }
+  </div>
+
+  <style is:global define:vars={{ skillColor, fontWeight, textCase }}>
+    h1 {
+      color: #2d3436;
+      font-size: 4rem;
+    }
+
+    .skill {
+      color: var(--skillColor);
+      font-weight: var(--fontWeight);
+      text-transform: var(--textCase);
+    }
+  </style>
 </Layout>
-
-<style is:global define:vars={{ skillColor, fontWeight, textCase }}>
-  h1 {
-    color: #2d3436;
-    font-size: 4rem;
-  }
-
-  .skill {
-    color: var(--skillColor);
-    font-weight: var(--fontWeight);
-    text-transform: var(--textCase);
-  }
-</style>
