--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,11 +1,23 @@
 ---
 import Hamburger from './Hamburger.astro';
 import Navigation from './Navigation.astro';
+import ThemeIcon from './ThemeIcon.astro';
+import headerImg from '../assets/header_flowers.png';
 ---
 
 <header>
   <nav>
+    <img src={headerImg.src} alt='Watercolor Flowers' id='headerImg' />
     <Hamburger />
     <Navigation />
+    <ThemeIcon />
   </nav>
 </header>
+
+<style>
+  #headerImg {
+    max-width: 80px;
+    margin-left: 1em;
+    display: block;
+  }
+</style>
