--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,23 +1,10 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import headerImg from '../assets/header_flowers.png';
-const pageTitle = 'Astro Blog Tutorial Home Page';
+import Hero from '../components/Hero.astro';
+
+const pageTitle = 'Watercolor Blog Tutorial';
 ---
 
-<Layout pageTitle={pageTitle}>
-  <img src={headerImg.src} alt='Watercolor Flowers' id='headerImg' />
-  <h2>My awesome little astro blog practice site</h2>
+<Layout>
+  <Hero pageTitle={pageTitle} />
 </Layout>
-
-<style>
-  #headerImg {
-    width: 100%;
-    max-width: 300px;
-    margin: 0 auto;
-    display: block;
-  }
-  h2 {
-    text-align: center;
-    font-size: 1.5rem;
-  }
-</style>
