--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -10,10 +10,14 @@ html {
   font-family: sans-serif;
 }
 
+html.dark {
+  background-color: #0d0950;
+  color: #fff;
+}
+
 body {
-  margin: 0 auto;
-  width: 100%;
-  max-width: 80ch;
+  /* margin: 0 auto; */
+  width: 100vw;
   padding: 0;
   line-height: 1.5;
 }
@@ -65,6 +69,7 @@ a {
 }
 
 main {
+  width: 100vw;
   display: flex;
   justify-content: center;
 }
@@ -75,7 +80,6 @@ main {
   flex-direction: column;
   justify-content: center;
   padding: 16px;
-  width: 90%;
 }
 
 h1 {
@@ -140,15 +144,17 @@ ul {
   transition: linear;
 }
 
+.dark .nav-links a {
+  color: #fff;
+}
+
 .expanded {
   display: unset;
 }
 
 @media screen and (min-width: 636px) {
   body {
-    margin: 0 auto;
-    width: 100%;
-    max-width: 80ch;
+    width: 100vw;
     padding: 1rem;
     line-height: 1.5;
   }
